--- a/GTSW/Bumblebee/Bumblebee/ExtSetCmd/StateConfiguration.xaml
+++ b/GTSW/Bumblebee/Bumblebee/ExtSetCmd/StateConfiguration.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="设置信号量有效状态" Height="360" Width="200"
-        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Loaded="Window_Loaded" FontFamily="Microsoft YaHei" FontSize="14">
+        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Loaded="Window_Loaded" FontFamily="Microsoft YaHei" FontSize="14" Icon="/Bumblebee;component/Resources/config.ico">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
