--- a/GTSW/Bumblebee/Bumblebee/SetCmd/Recorder1stInstallDateTime.xaml
+++ b/GTSW/Bumblebee/Bumblebee/SetCmd/Recorder1stInstallDateTime.xaml
@@ -3,7 +3,7 @@
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="记录仪初次安装日期" Height="130" Width="390"
-        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" FontFamily="Microsoft YaHei" FontSize="14">
+        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" FontFamily="Microsoft YaHei" FontSize="14" Icon="/Bumblebee;component/Resources/config.ico">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
