--- a/GTSW/Bumblebee/Bumblebee/SetCmd/VehicleInformation.xaml
+++ b/GTSW/Bumblebee/Bumblebee/SetCmd/VehicleInformation.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="设置车辆信息参数" Height="190" Width="330" WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
-        Loaded="Window_Loaded" FontFamily="Microsoft YaHei" FontSize="14">
+        Loaded="Window_Loaded" FontFamily="Microsoft YaHei" FontSize="14" Icon="/Bumblebee;component/Resources/config.ico">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
