--- a/GTSW/Bumblebee/Bumblebee/UploadVDR.xaml
+++ b/GTSW/Bumblebee/Bumblebee/UploadVDR.xaml
@@ -1,9 +1,13 @@
 ﻿<Window x:Class="Bumblebee.UploadVDR"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:bb="clr-namespace:Bumblebee"
         Title="上传VDR文件到服务器" Height="200" Width="450" WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize" FontFamily="Microsoft YaHei" FontSize="14" Icon="/Bumblebee;component/Resources/upload.ico"
         Loaded="Window_Loaded">
+    <Window.Resources>
+        <bb:Bools2BoolConverter x:Key="Bools2BoolConverter"/>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
@@ -24,27 +28,39 @@
                Content="服务器地址 :" Foreground="{Binding Path=ServerForeground,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
         <Label Grid.Row="2" Grid.Column="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"
                Content="本地文件 :" Foreground="{Binding Path=LocalForeground,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Label Grid.Row="3" Grid.Column="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="状态 :"/>
-        <TextBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3"
+        <Label Grid.Row="3" Grid.Column="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="上传状态 :"/>
+        <!--TextBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3"
                  HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                  Text="{Binding Path=State,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
-                 IsReadOnly="True"/>
+                 IsReadOnly="True"/-->
+        <ProgressBar Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3"
+                     Name="pbarUpload" Height="15"
+                     Maximum="{Binding Path=MaxValue,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+                     Minimum="{Binding Path=MinValue,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+                     Value="{Binding Path=CurValue,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
         <TextBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Name="txtServer"
                  HorizontalAlignment="Stretch" VerticalAlignment="Center"
                  Text="{Binding Path=Server,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                 IsEnabled="{Binding Path=NotInRun,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+                 IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
         <TextBox Grid.Column="1" Grid.Row="2"  Grid.ColumnSpan="2" Name="txtLocal"
                  HorizontalAlignment="Stretch" VerticalAlignment="Center" IsReadOnly="True"
                  Text="{Binding Path=Local,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
         <Button Grid.Row="5" Grid.Column="2" Margin="0,3,0,1" Width="75" Content="确认" Height="27"
-                IsEnabled="{Binding Path=OKEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 IsDefault="{Binding Path=OKDefault,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
-                Click="OK_Button_Click"/>
+                Click="OK_Button_Click">
+            <Button.IsEnabled>
+                <MultiBinding Converter="{StaticResource Bools2BoolConverter}">
+                    <Binding Path="NotInRun" Mode="OneWay" UpdateSourceTrigger="PropertyChanged"/>
+                    <Binding Path="OKEnabled" Mode="OneWay" UpdateSourceTrigger="PropertyChanged"/>
+                </MultiBinding>
+            </Button.IsEnabled>
+        </Button>
         <Button Grid.Row="5" Grid.Column="3" Margin="0,3,0,1" Width="75" Content="取消" IsCancel="True"  Height="27"
                 IsDefault="{Binding Path=CancelDefault,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
-                Click="Cancel_Button_Click"/>
+                IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+        Click="Cancel_Button_Click"/>
         <Button Grid.Row="2" Grid.Column="3" Margin="0,3,0,1" Width="75" Content="选择" Height="27"
-                IsEnabled="{Binding Path=NotInRun,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 Click="Local_Button_Click"/>
     </Grid>
 </Window>
